--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,21 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
   <meta http-equiv="x-ua-compatible" content="IE=Edge">
+  <meta name="theme-color" content="#131b28">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-title" content="Gear Genie">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <link rel="apple-touch-icon" href="/assets/icon/icon-512.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/assets/icon/icon-152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/icon/icon-180.png">
+  <link rel="apple-touch-icon" sizes="167x167" href="/assets/icon/icon-167.png">
+  <link rel="apple-touch-startup-image" href="/assets/launch/launch-640.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="/assets/launch/launch-750.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="/assets/launch/launch-1242.png" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="/assets/launch/launch-1125.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="/assets/launch/launch-1536.png" media="(min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="/assets/launch/launch-1668.png" media="(min-device-width: 834px) and (max-device-width: 834px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
+  <link rel="apple-touch-startup-image" href="/assets/launch/launch-2048.png" sizes="2048x2732" media="(min-device-width: 1024px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait)">
 
   <script type="module" src="/build/app.esm.js"></script>
   <script nomodule src="/build/app.js"></script>
